Added csv generation and changed how blast results are obtained and displayed

--- a/src/config/config.yaml
+++ b/src/config/config.yaml
@@ -1,7 +1,7 @@
 # Parameters for the NCBI search
 ncbi:
   apy_key:
-  email: dummy@example.com
+  email: exampleofemail@email.com
 
 # Parameters for the aligners
 primer_aligner:
