--- a/src/config/config.yaml
+++ b/src/config/config.yaml
@@ -16,3 +16,33 @@ long_aligner:
   open_gap_score: -0.5
   extend_gap_score: -0.1
 
+# Barcodes
+barcodes:
+  - name: "trnL-UAA"
+    query: "trnL-UAA"
+    fprimer: "CGAAATCGGTAGACGCTACG"
+    rprimer: "GGGGATAGAGGGACTTGAAC"
+  - name: "trnL-P6"
+    query: "trnL-UAA"
+    fprimer: "GGGCAATCCTGAGCCAA"
+    rprimer: "CCATTGAGTCTCTGCACCTATC"
+
+# BLAST 
+percentage_threshold: 98
+blast_modes:
+  - "Megablast"
+  - "Discontiguous blast"
+taxonomy_ranks:
+  - "genus"
+  - "tribe"
+  - "subfamily"
+  - "family"
+
+# Data visualisation
+data_types:
+  - "Number of differences"
+  - "Identity percentage"
+animation_duration: 1500
+
+ 
+
