Added Interactive tree feature

--- a/src/config/config.yaml
+++ b/src/config/config.yaml
@@ -33,10 +33,10 @@ blast_modes:
   - "Megablast"
   - "Discontiguous blast"
 taxonomy_ranks:
-  - "genus"
-  - "tribe"
-  - "subfamily"
-  - "family"
+  - "Genus"
+  - "Tribe"
+  - "Subfamily"
+  - "Family"
 
 # Data visualisation
 data_types:
