--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@
 # ignore fasta files
 *.fasta
 
-
+# ignore .DS_Store
+*.DS_Store
 
 #################################################
 ######### BOILER PLAT STUFF FROM GITHUB #########
